--- a/index.html
+++ b/index.html
@@ -857,7 +857,30 @@
 									height: 100%
 								}<br>
 
-								background: linear-gradient(to bottom, #f5f5f5, #fff)
+								background: linear-gradient(to bottom, #f5f5f5, #fff);
+							</code>
+						</article>
+
+						<article>
+							<h3>Repeating Linear Gradient</h3>
+							<code>
+								background: repeating-linear-gradient(red, blue 10%, yellow 35%);
+							</code>
+						</article>
+
+						<article>
+							<h3>Radial Gradient</h3>
+							<code>
+								background: radial-gradient(red 5%, blue 35%, yellow 50%);<br>
+								background: radial-gradient(circle, red 5%, blue 35%, yellow 50%);
+							</code>
+						</article>
+
+						<article>
+							<h3>Repeatin Radial Gradient</h3>
+							<code>
+								background: repeating-radial-gradient(red 5%, blue 35%, yellow 50%);
+							
 							</code>
 						</article>
 			</section>
@@ -869,6 +892,23 @@
 							<li>Text Shadows</li>
 							<li>Box Shadows</li>				
 						</ul>
+
+						<article>
+							<h3>Text Shadows</h3>
+
+							<code>
+								text-shadow: 5px 5px 5p #ccc;
+							</code>
+						</article>
+
+						<article>
+							<h3>Box Shadow</h3>
+
+							<code>
+								box-shadow: 5px 5px 5p #ccc;<br>
+								box-shadow: inset 5px 2px 3px #ccc;
+							</code>
+						</article>
 			</section>
 		<!-------Section------>
 			<section>
