--- a/index.html
+++ b/index.html
@@ -921,6 +921,49 @@
 							<li>Text Align Last</li>
 							<li>Self-Hosted Custom Fonts</li>
 						</ul>
+
+						<article>
+							<h3>Text Overflow</h3>
+							<code>
+								text-overflow: clip;<br>
+								text-overflow: ellipsis;
+							</code>
+						</article>
+
+						<article>
+							<h3>Word Wrap</h3>
+							<code>
+								word-wrap: break-word;
+							</code>
+						</article>
+
+						article>
+							<h3>Word Break</h3>
+							<code>
+								word-break: keep-all; /* break-all*/
+							</code>
+						</article>
+
+						<article>
+							<h3>Text Align Last</h3>
+
+							<code>
+								text-align-last: center;
+							</code>
+
+						</article>
+
+						<article>
+							<h3>Self Hosted Csutom Fonts</h3>
+
+							<code>
+								@font-face {
+									font-family: myFont;
+									src: url('fonts/Roboto.ttf');
+								}
+							</code>
+						</article>
+			</section>
 			</section>
 		<!-------Section------>
 		<section>
