--- a/index.html
+++ b/index.html
@@ -954,7 +954,7 @@
 						</article>
 
 						<article>
-							<h3>Self Hosted Csutom Fonts</h3>
+							<h3>Self Hosted Custom Fonts</h3>
 
 							<code>
 								@font-face {
@@ -975,6 +975,32 @@
 							<li>Transition Timing Functions</li>
 							<li>Transition Delay</li>
 						</ul>
+
+						<article>
+							<h3>Transition Sizes</h3>
+							<p>Transition between pont a to point b.</p>
+
+							<code>
+								.box {<br>
+									background-color: red;<br>
+									transition: .4s all;<br>
+								}<br>
+
+								.box:hover {<br>
+									background-color: blue;<br>
+								}
+							</code>
+						</article>
+
+						<article>
+							<h3>Transition Colors</h3>
+
+							<code>
+								transition-duration: .3s;<br>
+								transition-property: color;<br>
+								transition-timing-function: linear;
+							</code>
+						</article>
 			</section>
 		<!-------Section------>
 		<section>
