--- a/index.html
+++ b/index.html
@@ -1001,6 +1001,24 @@
 								transition-timing-function: linear;
 							</code>
 						</article>
+
+						<article>
+							<h3>Transition Timing Function</h3>
+							<code>
+								transition-duration: 2s;<br>
+								transition-property: left;<br>
+								transition-timing-function: ease-out;
+							</code>
+						</article>
+
+						<article>
+							<h3>Transition Delay</h3>
+
+							<code>
+								tansition-delay: .5s;
+							</code>
+
+						</article>
 			</section>
 		<!-------Section------>
 		<section>
