--- a/index.html
+++ b/index.html
@@ -1082,6 +1082,25 @@
 							<li>Animation Direction</li>	
 							<li>Animation Timing Function</li>			
 						</ul>
+
+						<article>
+							<h3>Animation Keyframes</h3>
+							<code>
+								@keyframes test {<br>
+
+									0% { ... } // 0s<br>
+									50% { ... } // 5s<br>
+									100% { ... } // 10s<br>
+								}<br>
+
+								div {
+									animation-name: test;<br>
+									animation-duration: 10s;<br>
+								}
+
+
+							</code>
+						</article>
 			</section>
 		<!-------Section------>
 		<section>
