--- a/index.html
+++ b/index.html
@@ -1101,6 +1101,19 @@
 
 							</code>
 						</article>
+
+						<article>
+							<h3>Animation Fill Mode</h3>
+							<code>
+								animation-fill-mode: forwards; /*It will finish the animation*/
+							</code>
+						</article>
+						<article>
+							<h3>Animation Iteration Count</h3>
+							<code>
+								animation-iteration count: infinite;
+							</code>
+						</article>
 			</section>
 		<!-------Section------>
 		<section>
