--- a/index.html
+++ b/index.html
@@ -1114,6 +1114,21 @@
 								animation-iteration count: infinite;
 							</code>
 						</article>
+
+						<article>
+							<h3>Animation Delay</h3>
+							<code>
+								animation-delay: 3s;
+							</code>
+						</article>
+
+						<article>
+							<h3>Animation Direction</h3>
+
+							<code>
+								animation-direction: reverse;
+							</code>
+						</article>
 			</section>
 		<!-------Section------>
 		<section>
