--- a/index.html
+++ b/index.html
@@ -1129,6 +1129,14 @@
 								animation-direction: reverse;
 							</code>
 						</article>
+
+						<article>
+							<h3>Animation Timing Function</h3>
+
+							<code>
+								animation-timing-function: linear;
+							</code>
+						</article>
 			</section>
 		<!-------Section------>
 		<section>
@@ -1139,6 +1147,28 @@
 							<li>Resize</li>
 							<li>Box Sizing</li>
 						</ul>
+
+						<article>
+							<h3>Columns</h3>
+							<code>
+								text-align: justify;<br>
+								columns: 3;
+							</code>
+						</article>
+
+						<article>
+							<h3>Resize</h3>
+							<code>
+								resize: both;
+							</code>
+						</article>
+
+						<article>
+							<h3>Box Sizing</h3>
+							<code>
+								box-size: border-box;
+							</code>
+						</article>
 			</section>
 		<!-------Section------>
 		<section>
