--- a/index.html
+++ b/index.html
@@ -1226,6 +1226,7 @@
 				<h2 id="responsive-web-design">Responsive Web Design</h2>
 
 						<ul>
+							<li>RWD Intro</li>
 							<li>RWD Meta Tag</li>
 							<li>Responsive Layout with Flexbox</li>
 							<li>RWD Print Mode</li>
@@ -1234,6 +1235,39 @@
 							<li>Responsive Images</li>
 							<li>Responsive iFrames</li>
 						</ul>
+
+						<article>
+							<h3>RWD Intro</h3>
+							<code>
+								@media(max-width: 600px) {<br>
+									element {<br>
+										property: value;<br>
+									}<br>
+								}
+							</code>
+						</article>
+
+						<article>
+							<h3>RWD Meta Tag</h3>
+							<h3></h3>
+
+							<code>
+								&lt;meta name="viewport" content="width=device-width, initial-scale=1.0"&gt;
+							</code>
+						</article>
+
+						<article>
+							<h3>Responsive Layout with Flexbox</h3>
+
+							<p>Layout Mobile First</p>
+							<code>
+								@media(min-width: 600px) {<br>
+									element {<br>
+										property: value;<br>
+									}<br>
+								}
+							</code>
+						</article>
 			</section>
 		<!-------Section------>
 		<!----RIGHT-BOX-END--->
