--- a/index.html
+++ b/index.html
@@ -1268,6 +1268,20 @@
 								}
 							</code>
 						</article>
+
+						<article>
+							<h3>RWD Print Mode</h3>
+							<p>Be aware you will need here the !important due to specificity.</p>
+							<code>
+								@media print {<br>
+									.nav,<br>
+									.footer {<br>
+										display: none;<br>
+									}<br>
+
+								}
+							</code>
+						</article>
 			</section>
 		<!-------Section------>
 		<!----RIGHT-BOX-END--->
