--- a/index.html
+++ b/index.html
@@ -575,7 +575,7 @@
 						<article>
 							<h3>Attribute Selector</h3>
 							<code>
-								input [type] {	}
+								input[type] {	}
 							</code>
 						</article>
 
@@ -1232,7 +1232,6 @@
 							<li>RWD Print Mode</li>
 							<li>Multiple Media Queries</li>
 							<li>Responsive Images</li>
-							<li>Responsive Images</li>
 							<li>Responsive iFrames</li>
 						</ul>
 
@@ -1280,6 +1279,18 @@
 									}<br>
 
 								}
+							</code>
+						</article>
+						
+					
+						<article>
+							<h3>Responsive iFrames</h3>
+
+							<code>
+									img{<br>
+										width:100%;<br>
+										height: auto;<br>
+									}
 							</code>
 						</article>
 			</section>
